@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #543, add resultHasChanged to track results which have changed
     Add getShakeExtraRules, like getShakeOptionsRules for shakeExtra
     #535, add shakeArgsOptionsWith to manipulate ShakeOptions
     #538, make sure processes can be killed properly
